WebCore/html/HTMLInputElement.h
@@ -283,6 +283,7 @@ private:
 
     virtual bool isAcceptableValue(const String&) const;
     virtual String sanitizeValue(const String&) const;
+    virtual bool hasUnacceptableValue() const;
 
     virtual void documentDidBecomeActive();
 
